--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - main
-
+      
+permissions:
+  contents: write  # This line gives the workflow write permissions
+  pull-requests: write  # This line gives the workflow pull request permissions
 jobs:
   updateAuthor:
     runs-on: ubuntu-latest
