--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Demo to create automatic PR1
+name: Demo to create automatic PR1 
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
         with:
           branch: "auto-pr-branch1"
           base: main
-          title: "demo for auto pr1"
+          title: "demo for autom pr1"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           body:
